# Virtual-Device-Simulator

./: .gitignore  Doxyfile  LICENSE  README.md  build_all_tests.py  build_tests.py  example_commands  gpiolib.cpp  gpiolib.h  main.cpp  notes  program.out  run_all_tests.py  run_tests.py
.github/workflows/: cmake.yml  test.yml
GPIO-Driver/: CMakeLists.txt  gpiolib.cpp  gpiolib.h  main.cpp  program.out
dev/: chipinfo.json  gpiochip0.cpp  gpiochip0.h
docs/html/: _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _comm_interface_8cpp.html  _comm_interface_8hpp.html  _comm_interface_8hpp.js  _comm_interface_8hpp_source.html  _mock_tests_8cpp.html  _mock_tests_8cpp.js  _program_to_be_tested_8cpp.html  _program_to_be_tested_8cpp.js  annotated.html  (+397 more)
driver/: AuxiliaryTools.cpp  AuxiliaryTools.h  CMakeLists.txt  DriverLibrary.cpp  DriverLibrary.h  driver-lib.cpp  driver-lib.h  drivercommapi.cpp  drivercommapi.h  drivercommapi.hpp  drivermain.cpp  libdriver.cpp  libdriver.h  libdriver.hpp  libdriverutility.cpp  libdriverutility.h  libdriverutility.hpp  main.cpp
driver/driver-googletest/: CMakeLists.txt  buildgtest.py  drivertest  test.cpp
driver/driver-int-tests/: CMakeLists.txt  run_drv_itests.py
driver/driver-int-tests/inc/: lib-drv-itest.hpp
driver/driver-int-tests/src/: AttributeGettersTest.cpp  CMakeLists.txt  CloseTest.cpp  ConfigTest.cpp  ConstructorTest.cpp  OpenDefaultTest.cpp  OpenReadOnlyTest.cpp  OpenWriteOnlyTest.cpp  ParseGPIOTest.cpp  ParseTest.cpp  ReadTest.cpp  ShowTest.cpp  WriteTest.cpp  int_test_main.cpp  lib-drv-itest.cpp
driver/driver-unit-test/: CMakeLists.txt  drivertest  run_utests.py  rungtest.py  unittestdriver.cpp
driver/driver-unit-test/inc/: lib-unittest.hpp
driver/driver-unit-test/src/: AttributeGettersTest.cpp  CMakeLists.txt  CloseTest.cpp  ConfigTest.cpp  ConstructorTest.cpp  MockTests.cpp  OpenDefaultTest.cpp  OpenReadOnlyTest.cpp  OpenWriteOnlyTest.cpp  ParseGPIOTest.cpp  ParseTest.cpp  lib-unittest.cpp  unit_test_main.cpp
driver/driver-unit-tests/: build_utests.py  defaultConfigShowGPIO  defaultConfigShowSPI
driver/driver-unit-tests/dev/: default_GPIO_chipInfo.json
driver/driver-unit-tests/inc/: lib-unittest.hpp
driver/driver-unit-tests/src/: ConfigTest.cpp  MockTests.cpp  OpenWriteOnlyTest.cpp  ParseGPIOTest.cpp  ReadTest.cpp  ShowTest.cpp  WriteTest.cpp  unit_test_main.cpp
driver/inc/: drivercommapi.hpp  libdriver.hpp  libdriverutility.hpp
driver/src/: drivercommapi.cpp  drivermain.cpp  libdriver.cpp  libdriverutility.cpp
driver/test/: CMakeLists.txt  test.cpp
runtime-environment/: CMakeLists.txt  SPI_A_processed.json  build.py  commands.json  commands.txt  commands_processed.json  device  device2  device_config_creator.py  run.py  run_tests.py  run_windows.py  test1.py  test1_cpp_mock.py  test_runner.robot  test_suite.py
runtime-environment/dev/: default_UART_chipInfo.json
runtime-environment/dev-config/config_json/: can_config.json  ethernet_config.json  gpio_config.json  i2c_config.json  spi_config.json  uart_config.json  usart_config.json
runtime-environment/dev-config/config_yaml/: can_config.yaml  ethernet_config.yaml  gpio_config.yaml  i2c_config.yaml  spi_config.yaml  uart_config.yaml  usart_config.yaml
runtime-environment/dev-config/json_configs/: gpio_config.json
runtime-environment/dev-config/yaml_configs/: gpio_config.yaml
runtime-environment/integration-test/: CMakeLists.txt  run_itests.py  run_serial_itests.py
runtime-environment/integration-test/case-1/: case_1_input_arguments
runtime-environment/integration-test/case-1/case-1-output/: communication-register  log
runtime-environment/integration-test/case-2/: case_2_input_commands
runtime-environment/integration-test/case-2/case-2-output/: communication-register  log
runtime-environment/integration-test/case-3/: case_3_input_arguments  case_3_input_commands
runtime-environment/integration-test/case-3/case-3-output/: communication-register  log
runtime-environment/integration-test/case-4/: case_4_input_arguments  case_4_input_commands
runtime-environment/integration-test/case-4/case-4-output/: communication-register  log
runtime-environment/integration-test/inc/: lib-integrationtest.hpp
runtime-environment/integration-test/src/: CMakeLists.txt  integration_test_main.cpp  lib-integrationtest.cpp
runtime-environment/integrity-test/: CMakeLists.txt  buildgtest.py  integration_test_main.cpp  integrity_test.cpp  lib-integrationtest.cpp  lib-integrationtest.hpp  run_itests.py  rungtest.py
runtime-environment/integrity-test/case-1/: case_1_input_commands
runtime-environment/integrity-test/case-1/case-1-output/: gpiodevice
runtime-environment/integrity-test/case-2/: case_1_input_arguments
runtime-environment/integrity-test/case-2/case-2-output/: spidevice
runtime-environment/integrity-test/case-3/case-3-output/: candevice
runtime-environment/integrity-test/case-4/case-4-output/: i2cdevice
runtime-environment/process-communication/: comm_interface.py  cpp_interface.cpp  example.py  example_usage.md  python_interface.py
runtime-environment/process-communication/cpp_comm_interface/inc/: CommInterface.hpp
runtime-environment/process-communication/cpp_comm_interface/src/: CMakeLists.txt  CommInterface.cpp
spi-processing/: Ex10_SPI_LOG.txt  Rs_SPI_Log (copy).txt  SPI_Log.txt  config.yaml  cpp_wrapper_usage  cpp_wrapper_usage.md  in  input_file.txt  out  pexpect_wrapper.py  script.py  spi_data.json  spi_data_copy.db  spi_finder.py  spi_finder_test.robot  spi_log_only_write.txt  spi_processor.py
spi-processing/cpp_wrapper/src/: CMakeLists.txt  SPI_A.json  SPI_A.txt  SPI_A_processed.json  SpiProcessorUtil.cpp  SpiProcessorWrapper.cpp
test-environment/: command  commandsText  communication-register  compile.py  compile_and_run.py  dev_dir  driver.out  fromText.py  history  log  main.py  program.out  run.py  start.py  tester.out
tester/: CMakeLists.txt  libtesterutility.cpp  libtesterutility.h  libtesterutility.hpp  main.cpp  testercommapi.cpp  testercommapi.h  testercommapi.hpp  testermain.cpp
testerScript/: main.py  program.out
(+186 files in other folders)
